; ModuleID = '/home/carl/AnghaBench/systemd/src/firstboot/extr_firstboot.c_press_any_key.c'
source_filename = "/home/carl/AnghaBench/systemd/src/firstboot/extr_firstboot.c_press_any_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"-- Press any key to proceed --\00", align 1
@stdout = common dso_local global i32 0, align 4
@stdin = common dso_local global i32 0, align 4
@USEC_INFINITY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @press_any_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @press_any_key() #0 {
  %1 = alloca i8, align 1
  %2 = alloca i32, align 4
  store i8 0, i8* %1, align 1
  store i32 1, i32* %2, align 4
  %3 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @stdout, align 4
  %5 = call i32 @fflush(i32 %4)
  %6 = load i32, i32* @stdin, align 4
  %7 = load i32, i32* @USEC_INFINITY, align 4
  %8 = call i32 @read_one_char(i32 %6, i8* %1, i32 %7, i32* %2)
  %9 = load i32, i32* %2, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = call i32 @putchar(i8 signext 10)
  br label %13

13:                                               ; preds = %11, %0
  %14 = load i8, i8* %1, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp ne i32 %15, 113
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @read_one_char(i32, i8*, i32, i32*) #1

declare dso_local i32 @putchar(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
